// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AllocationVariationGr Component should handle multiple variations 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          33
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          33
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant B
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          34
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should handle variation group with no matched targeting 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should not show group name when not personal campaign 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should render variation group with allocations 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should render with different display statuses 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should render with different display statuses 2`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should render with different display statuses 3`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AllocationVariationGr Component should show group name for personal campaign 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "marginBottom": 15,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 16,
        "fontWeight": "bold",
        "marginBottom": 10,
      }
    }
  >
    Personal Group
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View>
      Icon
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#000000",
            "borderWidth": 1,
          },
          {
            "borderRadius": 4,
            "flex": 15,
            "padding": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Control
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Variant A
          :
        </Text>
        <Text
          style={
            {
              "backgroundColor": "#DBE5FF",
              "borderRadius": 15,
              "fontWeight": "600",
              "paddingHorizontal": 10,
              "paddingVertical": 3,
            }
          }
        >
          50
          %
        </Text>
      </View>
    </View>
  </View>
</View>
`;
